# erly

./: .gitignore  README.md
ceci/: CMakeLists.txt  README.md
ceci/cmake/: FindErlang.cmake
ceci/src/: CMakeLists.txt  ceci.c
pulleyback/: CMakeLists.txt  Makefile  README.md  messenger.json  messenger.ply
pulleyback/cmake/: FindErlang.cmake
pulleyback/src/: CMakeLists.txt  pulleyback_erl.c
tutorial/: Makefile  README.md  messenger.erl
